<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/caption_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/date"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/time"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <Button
        android:id="@+id/button_talk"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:text="@string/button_talk" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        tools:background="#ffe433" />

</LinearLayout>